--- a/src/components/BloodDonationFormContainer.css
+++ b/src/components/BloodDonationFormContainer.css
@@ -51,9 +51,9 @@ textarea {
 
 .text-item {
   position: absolute;
-  color: white;
+  /* color: white; */
   /* font-weight: bold; */
-  font-size: 17px;
+  /* font-size: 17px; */
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
 }
 
@@ -66,15 +66,15 @@ textarea {
 .text-item.blood-group {
   font-family: "League Spartan", sans-serif;
   font-weight: 700;
-  font-size: 78px;
-  color: #e3240d;
+  /* font-size: 78px; */
+  /* color: #e3240d; */
   /* letter-spacing: 2px; */
 }
 
 .text-item.regardless-blood-group {
-  top: 68px;
-  left: 25px;
-  font-size: 47px;
+  /* top: 68px; */
+  /* left: 25px; */
+  /* font-size: 47px; */
   text-align: center;
 }
 
