feat: add dynamic styling and positioning for blood donation templates 2

--- a/src/components/BloodDonationFormContainer.css
+++ b/src/components/BloodDonationFormContainer.css
@@ -52,13 +52,13 @@ textarea {
 .text-item {
   position: absolute;
   /* color: white; */
-  /* font-weight: bold; */
+  font-weight: bold;
   /* font-size: 17px; */
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+  /* text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7); */
 }
 
 .text-item.multiline {
-  font-size: 16px;
+  /* font-size: 16px; */
   white-space: pre-wrap;
   line-height: 1.1;
 }
