feat: adjust positioning and font size for Template2 based on donation info length

--- a/src/components/BloodDonationFormContainer.css
+++ b/src/components/BloodDonationFormContainer.css
@@ -52,7 +52,7 @@ textarea {
 .text-item {
   position: absolute;
   /* color: white; */
-  font-weight: bold;
+  /* font-weight: bold; */
   /* font-size: 17px; */
   /* text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7); */
 }
